refactor: 카드 덱 자료구조 Stack에서 Deque로 변경